# sealable

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md
.github/workflows/: publish.yml
examples/: demo.rs
src/: codec.rs  crypto.rs  error.rs  lib.rs  traits.rs
